# rogue-mcp

./: README.md  pyproject.toml
src/rogue_mcp/: server.py
