[project]
name = "rogue-mcp"
version = "0.1.0"
description = "A rogue MCP server demo how agentic AI and tool chaining can be abused."
authors = [
    { name = "Omprakash", email = "omprakash.ramesh@grabtaxi.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastmcp",
    "keyring"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
rogue-mcp = "rogue_mcp.server:main" 